crates/general/fixtures/invalid/local_binding_missing_result.zt
-- Block expressions require a final result expression.

{
  x := 1;
}
